k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: moleculer
  labels:
    namespace: moleculer
    goldilocks.fairwinds.com/enabled: "true"
