k8s/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: valkey
spec:
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:8.1.3-alpine
          ports:
            - name: valkey
              containerPort: 6379
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256M
            limits:
              cpu: 1000m
              memory: 1024M
          livenessProbe:
            tcpSocket:
              port: valkey
          readinessProbe:
            tcpSocket:
              port: valkey
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nats
spec:
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: nats
          image: nats:2.6.5-alpine
          args:
            - -c
            - /server.conf
          ports:
            - name: nats
              containerPort: 4222
              protocol: TCP
            - name: http
              containerPort: 8222
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /
          readinessProbe:
            httpGet:
              port: http
              path: /
          resources:
            requests:
              cpu: 100m
              memory: 256M
            limits:
              cpu: 1000m
              memory: 1024M
          volumeMounts:
            - name: config
              mountPath: /server.conf
              subPath: server.conf
      volumes:
        - name: config
          configMap:
            name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  labels:
    app: redis-commander
spec:
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 100m
              memory: 64M
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  labels:
    app: meilisearch
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      automountServiceAccountToken: false
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.15.2
          ports:
            - name: http
              protocol: TCP
              containerPort: 7700
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 2048M
