k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  labels:
    app: valkey
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: valkey
      protocol: TCP
      name: valkey
  selector:
    app: valkey
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  labels:
    app: nats
spec:
  type: ClusterIP
  ports:
    - port: 4222
      targetPort: nats
      protocol: TCP
      name: nats
  selector:
    app: nats
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  labels:
    app: redis-commander
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: redis-commander
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  labels:
    app: meilisearch
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: meilisearch
